# TradingShortTerm

./: .env.example  .gitignore  APP_INTEGRATION_EXAMPLES.tsx  BINANCE_TESTNET_SETUP.md  CHARTING_MODULE_GUIDE.md  Cargo.toml  ORIGINAL_README_BLUEPRINT.md  QUICK_START.md  README.md  TECHNICAL_DOCUMENTATION.md  TROUBLESHOOTING.md  ZigZag.md  ZigZag_Hedge_Free.mq5  ZigZag_Hedge_Free.mq5.cpp  config.py  core.py  database_schema.sql  dev-app-update.yml  docker-compose.yml  electron-builder.yml  electron.vite.config.ts  engines.py  main.py  package-lock.json  package.json  requirements.txt  storage.py  strategies.py  supabase_schema.sql  tailwind.config.js  test_api.py  test_imports.py  test_imports_config.py  tsconfig.web.json  utils.py  vercel.json
.claude/: settings.json  settings.local.json
backend/: .env.example  .gitignore  README.md  go.mod  go.sum  main.go
backend/client/: trading.go
backend/config/: config.go
backend/server/: http_server.go
backend/websocket/: broadcast_hub.go  data_buffer.go  kline_stream.go  price_stream.go
data/BTCUSDT/: BTCUSDT_20260223_145530.parquet
docs/: ARCHITECTURE.md  system_architecture.md
live_engine/: __init__.py  config.py  indicators.py  main.py  oms.py  risk.py  signal_engine.py  ws_manager.py
mft_engine/: Cargo.toml
mft_engine/src/: backtest.rs  config.rs  data.rs  engine.rs  executor.rs  lib.rs  live.rs  live_main.rs  main.rs  metrics.rs  models.rs  risk.rs  strategy.rs  time_sync.rs
mft_engine/src/models/: garch.rs  mod.rs  ofi.rs  ou_process.rs
nautilus_backtest/: analytics.py  data_loader.py  fetch.py  fetch_data.py  instruments.py  requirements.txt  run.py  run_backtest.py  run_node.py  strategy.py
nautilus_backtest/strategies/: __init__.py  ams_scalper.py  live_strategy.py  mft_strategy.py
nautilus_integration/: README_NAUTILUS.md  __init__.py  backtest_runner.py  data_BTCUSDT_1m_30d.csv  data_utils.py  download_data.py  strat_adapter.py
rust_backtest/: Cargo.toml  README.md  README_SIMPLE.md  README_UNIFIED.md  data_cache_agg.parquet  errors.txt
rust_backtest/data/BTCUSDT/: BTCUSDT_20260222_184459.parquet  BTCUSDT_20260222_184637.parquet  BTCUSDT_20260223_044925.parquet  BTCUSDT_20260223_053136.parquet  BTCUSDT_20260223_090725.parquet  BTCUSDT_20260223_143902.parquet
rust_backtest/data/ETHUSDT/: ETHUSDT_20260222_184659.parquet  ETHUSDT_20260223_044955.parquet  ETHUSDT_20260223_053150.parquet  ETHUSDT_20260223_090810.parquet  ETHUSDT_20260223_143903.parquet
rust_backtest/data/SOLUSDT/: SOLUSDT_20260222_184714.parquet  SOLUSDT_20260223_045008.parquet  SOLUSDT_20260223_053206.parquet  SOLUSDT_20260223_090844.parquet  SOLUSDT_20260223_143904.parquet
rust_backtest/reports/: backtest_report_BTCUSDT_20260223_162015.txt  equity_curve_BTCUSDT_20260223_162015.csv
rust_backtest/src/: backtest.rs  check_method.rs  complete_data.rs  data.rs  data_adapter.rs  fetch_data.rs  lib.rs  main.rs  main_complete.rs  main_complete_fixed.rs  reporting.rs  simple_backtest.rs  simple_main.rs  strategy_wrapper.rs  test_variants.rs  unified_backtest.rs  vortex_strategy.rs
src/main/: index.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx
src/renderer/src/assets/: main.css
src/renderer/src/components/: AdvancedTradingChart.tsx  AssetSelector.tsx  BalanceDisplay.tsx  BinanceAccountPanel.tsx  BottomPanel.tsx  CandlestickChart.tsx  ChartToolbar.tsx  CountdownTimer.tsx  DailyPerformanceCalendar.tsx  DayDetailModal.tsx  EnhancedTradingDashboard.tsx  MarketOverview.tsx  MultiAssetTradingPanel.tsx  OrderHistory.tsx  OrderPanel.tsx  PriceAlerts.tsx  SymbolSelector.tsx  TopBar.tsx  TradingChart.tsx  TradingPanel.tsx  TradingViewChart.tsx  (+2 more)
tests/: debug_bar_init.py  debug_nautilus_types.py  debug_price_v2.py  find_bartype_format.py  inspect_add_venue.py  inspect_bar_details.py  inspect_data.py  inspect_instruments.py  inspect_money.py  inspect_nautilus.py  inspect_ob_subs.py  inspect_price.py  inspect_strategy_subs.py  inspect_various.py  test_api.py  test_bartype_again.py  verify_bar_order.py  verify_types_v3.py
tests/nautilus_integration/: backtest_runner.py  data_ADAUSDT_1m_30d.csv  data_ALGOUSDT_1m_30d.csv  data_ATOMUSDT_1m_30d.csv  data_AVAXUSDT_1m_30d.csv  data_BCHUSDT_1m_30d.csv  data_BNBUSDT_1m_30d.csv  data_BTCUSDT_1m_30d.csv  data_DOGEUSDT_1m_30d.csv  data_ETHUSDT_1m_30d.csv  data_LINKUSDT_1m_30d.csv  data_LTCUSDT_1m_30d.csv  data_MANAUSDT_1m_30d.csv  data_POLUSDT_1m_30d.csv  data_SANDUSDT_1m_30d.csv  data_SOLUSDT_1m_30d.csv  data_XRPUSDT_1m_30d.csv  data_utils.py  download_data.py  strat_adapter.py
v1_python/: backtest_complete.py  database_schema.sql  engines.py  logger_config.py  main.py  strategies.py
(+23 files in other folders)
