[package]
name = "mft_engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "High-performance trading engine using Polars and TA-Lib"

[dependencies]
# Async Runtime
tokio = { version = "1.38", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"

# Data Handling & Speed
dashmap = "6.0"
polars = { version = "0.41", features = ["lazy", "dtype-datetime"] }

# Serialization & Time
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Utilities & Error Handling
anyhow = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"

[lib]
name = "mft_engine"
path = "src/lib.rs"

[[bin]]
name = "mft_bot"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
