[package]
name = "rust_backtest"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "simple_backtest"
path = "src/main.rs"

[[bin]]
name = "complete_backtest"
path = "src/main_complete.rs"

[[bin]]
name = "complete_backtest_fixed"
path = "src/main_complete_fixed.rs"

[dependencies]
nautilus-backtest = "0.53.0"
nautilus-execution = "0.53.0"
nautilus-model = "0.53.0"
nautilus-trading = { version = "0.53.0", features = ["examples"] }
ahash = "0.8"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
polars = { version = "0.36", features = ["parquet"] }
