[package]
name = "rust_backtest"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backtest"
path = "src/backtest.rs"

[[bin]]
name = "fetch_data"
path = "src/fetch_data.rs"

[dependencies]

# Nautilus for realistic backtest
nautilus-backtest = "0.53.0"
nautilus-execution = "0.53.0"
nautilus-model = "0.53.0"
nautilus-core = "0.53.0"
nautilus-trading = { version = "0.53.0", features = ["examples"] }

# Core dependencies
ahash = "0.8"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
polars = { version = "0.46", features = ["parquet", "lazy"] }
mft_engine = { path = "../mft_engine" }
dotenvy = "0.15"
glob = "0.3"
rust_decimal = "1.32"
log = "0.4"
statrs = "0.17"


