[package]
name = "rust_backtest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nautilus_demo"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Data processing
polars = { version = "0.46", features = ["parquet", "lazy", "temporal"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Utilities
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
